--- a/tour.html
+++ b/tour.html
@@ -111,20 +111,32 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>TBA</td>
-                    <td>Special December</td>
-                  </tr>
-                  <tr>
-                    <td>5th November 2022</td>
-                    <td>A.J and Friends</td>
-                  </tr>
-                  <tr>
                     <td>16th May, 2022</td>
                     <td>Umsonst und Draußen Festival Würzburg 2022</td>
                   </tr>
                   <tr>
+                    <td>19th May, 2022</td>
+                    <td>Boys 2 men Virtual Meeting Berlin</td>
+                  </tr>
+                  <tr>
+                    <td>23rd May, 2022</td>
+                    <td>Music Pool Berlin Artist Meetup</td>
+                  </tr>
+                  <tr>
+                    <td>26th May, 2022</td>
+                    <td>We Go Dey Cool EP Virtual Release Party</td>
+                  </tr>
+                  <tr>
                     <td>TBA</td>
                     <td>Saved to Serve Music Concert - France</td>
+                  </tr>
+                  <tr>
+                    <td>4th November 2022</td>
+                    <td>A.J and Friends</td>
+                  </tr>
+                  <tr>
+                    <td>TBA</td>
+                    <td>Special December</td>
                   </tr>
                 </tbody>
               </table>
