--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,6 @@
                   novalidate
                 >
                   <div id="mc_embed_signup_scroll">
-                    <h2>Sign up to be amongst the first to hear it.</h2>
                     <div class="indicates-required">
                       <span class="asterisk">*</span> indicates required
                     </div>
@@ -270,7 +269,7 @@
                       <div class="clear foot">
                         <input
                           type="submit"
-                          value="Subscribe"
+                          value="Send"
                           name="subscribe"
                           id="mc-embedded-subscribe"
                           class="button"
