--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
         <div class="container">
           <div class="row my-5">
             <div class="col-md-4 my-auto">
-              <h3>Nana A.J on Gorillas</h3>
+              <h3>Nana A.J Featured in Gorillas Magazine</h3>
               <a
                 target="_blank"
                 class="read-more"
@@ -121,7 +121,7 @@
           </div>
           <div class="row my-5">
             <div class="col-md-4 my-auto small">
-              <h3>Nana A.J reassures on new single Bigger</h3>
+              <h3>Nana A.J is with Pedal Records</h3>
               <a
                 target="_blank"
                 class="read-more"
@@ -142,7 +142,7 @@
               /></a>
             </div>
             <div class="col-md-4 my-auto big">
-              <h3>Nana A.J reassures on new single Bigger</h3>
+              <h3>Nana A.J is with Pedal Records</h3>
               <a
                 target="_blank"
                 class="read-more"
