--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,14 @@
               <a class="nav-link" href="/tour.html">Tour</a>
             </li>
             <li class="nav-item single_link">
+              <a
+                class="nav-link"
+                target="_blank"
+                href="https://nana-a-j-merchandise.myshopify.com/admin"
+                >Merchandise</a
+              >
+            </li>
+            <li class="nav-item single_link">
               <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
